[build-system]
requires = ["setuptools>=49.2.0", "wheel>=0.34.2", "cffi>=1.14.0",
    "setuptools-scm[toml]>=4.1.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "cbgen/_version.py"

[tool.isort]
profile = "black"
src_paths = ["cbgen"]

[tool.coverage.report]
exclude_lines = [
    "if __name__ == .__main__.:",
]
