[build-system]
requires = ["poetry-core>=1.0.8", "cffi>=1.15.1", "cmake>=3.22.5"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "cbgen"
version = "1.0.2"
description = "Python wrapper around a BGEN library"
license = "MIT"
authors = ["Carl Kadie <carlk@msn.com>", "Danilo Horta <danilo.horta@pm.me>"]
readme = "README.md"
repository = "https://github.com/limix/cbgen"
homepage = "https://github.com/limix/cbgen"
keywords = ["bgen", "reader", "genetics"]
classifiers = ["License :: OSI Approved :: MIT License"]
include = [
  { path = "cbgen/*.c", format = "sdist" },
  { path = "cbgen/*.h", format = "sdist" },
  { path = "cbgen/*.pyd", format = "wheel" },
  { path = "cbgen/*.so", format = "wheel" },
]

[tool.poetry.dependencies]
appdirs = "*"
cffi = "*"
numpy = "*"
pooch = "*"
pytest = "*"
python = ">=3.8,<3.11"
urllib3 = ">=1.26"

[tool.poetry.dev-dependencies]
black = "*"
isort = "*"
pyright = "*"
pytest = "*"

[tool.poetry.build]
generate-setup-file = false
script = "build_ext.py"

[tool.cibuildwheel]
skip = "pp* *-win32 *_i686 *musllinux*"
manylinux-x86_64-image = "manylinux2014"
manylinux-aarch64-image = "manylinux2014"

[tool.cibuildwheel.linux]
before-all = "yum install -y libffi-devel"

[tool.isort]
profile = "black"
