[build-system]
requires = ["poetry-core", "cffi", "cmake"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "cbgen"
version = "1.0.5"
description = "Python wrapper around a BGEN library"
license = "MIT"
authors = ["Carl Kadie <carlk@msn.com>", "Danilo Horta <danilo.horta@pm.me>"]
readme = "README.md"
repository = "https://github.com/limix/cbgen"
homepage = "https://github.com/limix/cbgen"
keywords = ["bgen", "reader", "genetics"]
classifiers = ["License :: OSI Approved :: MIT License"]
include = [
  { path = "cbgen/*.c", format = "sdist" },
  { path = "cbgen/*.h", format = "sdist" },
  { path = "cbgen/*.pyd", format = "wheel" },
  { path = "cbgen/*.so", format = "wheel" },
]

[tool.poetry.dependencies]
appdirs = "*"
cffi = "*"
numpy = "*"
pooch = "*"
pytest = "*"
python = "^3.9"
urllib3 = ">=1.26"

[tool.poetry.group.dev.dependencies]
pytest = "^7"

[tool.poetry.build]
generate-setup-file = false
script = "build_ext.py"

[tool.cibuildwheel]
skip = "pp* *-win32 *_i686"

[tool.pytest.ini_options]
pythonpath = ["."]
