[metadata]
author = Danilo Horta
author_email = horta@ebi.ac.uk
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
description = Python wrapper around bgen library
download_url = https://github.com/limix/bgen-py
keywords = bgen, reader, genetics
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown
maintainer = Danilo Horta
platforms = Windows, MacOS, Linux
maintainer_email = horta@ebi.ac.uk
name = bgen
url = https://github.com/limix/bgen-py

[options]
zip_safe = False
include_package_data = True
packages = find:
setup_requires =
    cffi>=1.14.1
    pytest-runner>=5.2
install_requires =
    appdirs>=1.4.3
    cffi>=1.14.1
    numpy>=1.17.4
    pooch>=1.1.1
    pytest>=5.4.1

[aliases]
test = pytest

[tool:pytest]
addopts =
    --doctest-modules
norecursedirs = .eggs .git *.egg-info build .ropeproject .pytest_cache __pycache__ .undodir
doctest_optionflags = NORMALIZE_WHITESPACE IGNORE_EXCEPTION_DETAIL ALLOW_UNICODE
