[metadata]
author = Danilo Horta
author_email = horta@ebi.ac.uk
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
description = Python wrapper around bgen library
keywords = bgen, reader, genetics
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown
maintainer = Danilo Horta
platforms = Windows, MacOS, Linux
maintainer_email = horta@ebi.ac.uk
name = cbgen
url = https://github.com/limix/cbgen

[options]
zip_safe = False
include_package_data = True
packages = find:
setup_requires =
    cffi>=1.14.0
    pytest-runner>=5.2
    setuptools-scm[toml]>=4.1.2
    wheel>=0.34.2
install_requires =
    appdirs>=1.4.3
    cffi>=1.14.0
    numpy>=1.17.0
    pooch>=1.1.1
    pytest>=5.4.1

[aliases]
test = pytest

[tool:pytest]
addopts =
    --doctest-modules
    --doctest-glob='*.rst'
norecursedirs = .eggs .git *.egg-info build .ropeproject .pytest_cache __pycache__ .undodir
